demographic update is in progress
